--- a/lekhraj.tex
+++ b/lekhraj.tex
@@ -99,9 +99,8 @@ High School &MPVM Allahabad & CBSE &2013&95\\
 \item {\bf Languages known:-} Hindi, English
 \end{itemize}
 
+\section{\sc REFERENCE} Dr. Ram Chandra Singh Chauhan\\
+Prof. Electronics and Communication Engineering\\ rcschauhan@ietlucknow.ac.in
+
 \end{resume}
 \end{document}
-
-\begin{flushright}
-\includegraphics[width=2cm, height=3cm]{screen.png}
-\end{flushright}
