Updated the project section
Provided more info to the project section.

--- a/lekhraj.tex
+++ b/lekhraj.tex
@@ -38,7 +38,8 @@ High School &MPVM Allahabad & CBSE &2013&95\\
 \section{\sc PROJECTS}
 
 \begin{enumerate}
-\item Chaser Drone
+\item {\bf Project Repository : }https://github.com/Lekhraj1729
+\item Chaser Drone: Using ROS and Whycon marker detection and PID algorithm to control drone motion
 \item GUI based Malaria detection using image processing through MATLAB
 \item Game automation using adb tools and image processing through MATLAB
 \end{enumerate}
