--- a/lekhraj.tex
+++ b/lekhraj.tex
@@ -103,5 +103,7 @@ High School &MPVM Allahabad & CBSE &2013&95\\
 \section{\sc REFERENCE} Dr. Ram Chandra Singh Chauhan\\
 Prof. Electronics and Communication Engineering\\ rcschauhan@ietlucknow.ac.in
 
+\section{\sc DECLARATION} I hereby declare that all the information stated above is true to the best of my knowledge.
+
 \end{resume}
 \end{document}
