Added Date section

--- a/lekhraj.tex
+++ b/lekhraj.tex
@@ -35,8 +35,8 @@ Intermediate&MPVM Allahabad&CBSE&2015&92\\
 High School &MPVM Allahabad & CBSE &2013&95\\
 \hline
 \end{tabular}
-\section{\sc PROJECTS}
 
+\section{\sc PROJECTS}
 \begin{enumerate}
 \item {\bf Project Repository : }https://github.com/Lekhraj1729
 \item Chaser Drone: Using ROS and Whycon marker detection and PID algorithm to control drone motion
@@ -105,5 +105,6 @@ Prof. Electronics and Communication Engineering\\ rcschauhan@ietlucknow.ac.in
 
 \section{\sc DECLARATION} I hereby declare that all the information stated above is true to the best of my knowledge.
 
+\section{\sc DATE} \today
 \end{resume}
 \end{document}
